--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,10 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>zipJar</finalName>
+                            <finalName>csvReader</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.job4j.io.Zip</mainClass>
+                                    <mainClass>ru.job4j.io.scanner.CSVReader</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
