--- a/app.properties
+++ b/app.properties
@@ -1,6 +1,4 @@
-# PostgreSQL
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.connection.driver_class=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/idea_db
-login=postgres
-password=password
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=password
