--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>71.1</version>
+        </dependency>
     </dependencies>
 
     <build>
